2009-09-06  Timo Schulz  <ts@g10code.de>

	* recipient-dialog.c (recipient_dialog2): Do not free
	key array here.
	
2008-08-21  Timo Schulz  <ts@g10code.de>

	* engine-gpgme.c (op_lookup_keys): Only add useable keys
	and add all invalid keys to unknown.
	* recipient-dialog.c (copy_item): Rewritten.
	(initialize_keybox): Add comment to clarify use of fnd_keys.
	(recipient_dialog_box): Simplified.
	(find_item): Support partial search.
	
2006-08-19  Timo Schulz  <ts@g10code.de>

	* olflange-rsrcs.rc: Correct some dialog sizes.
	* passphrase-dialog.c (decrypt_key_dlg_proc): Automatically
	select the secret key if only one is available.
	* config-dialog.c (GPGOptionsDlgProc): Passphrase cache
	time is now requested in minutes but still internally
	stored as seconds.
	
2006-08-15  Timo Schulz  <ts@g10code.de>

	* decrypt.bmp, encrypt.bmp: Restore format.
	* olflange.cpp (OnWriteComplete): Correct exit code handling.
	* recipient-dialog.c (initialize_rsetbox): Correct column width.
	(recipient_dlg_proc): Do not show the cancel error any longer.
	* passphrase-dialog.c (decrypt_key_dlg_proc): Likewise.
	(decrypt_key_ext_dlg_proc): Ditto.
	* olgpgcore.def: Deleted unused file.
	
2006-06-14  Timo Schulz  <ts@g10code.com>

	* gpgol-rscs.rc (IDD_OPT): The English version of the dialog
	has no log file item. Add it.
	
2006-05-22  Timo Schulz  <ts@g10code.com>

	* verify-dialog.c (load_sigbox): A sigsum of 0 also indicates
	a valid (good) signature.
	
2006-04-25  Werner Koch  <wk@g10code.com>

	* xmalloc.h: New.  Moved prototypes from util.h 
	* w32-gettext.h:  Include it.
	* common.c (utf8_to_wincp): Removed and replaced all callers by
	utf8_to_native.
	* common.c (wchar_to_utf8, utf8_to_wchar): Moved to ..
	* w32-gettext.c: .. here.
	(utf8_to_native): Make sure that we always return
	a string and never NULL.
	(native_to_utf8): New.
	(native_to_wchar): New.
	* gpgmsg.cpp (decrypt): Use native_to_utf8 for i18n strings
	expected to be utf-8.