@@ -1,3 +1,13 @@
+2006-10-14  Timo Schulz  <ts@g10code.de>
+
+	* recipient-dialog.c (lv_get_item_param): New.
+	(copy_item): Use it here to copy the opaque param.
+	(recipient_dlg_proc): And here to avoid the hidden column.
+	(initialize_rsetbox): Localize column names.
+
+	* olflange.cpp (get_outlook_property): Free returned BSTR.
+	(InstallCommands): Likewise.
+	
 2009-09-06  Timo Schulz  <ts@g10code.de>
 
 	* recipient-dialog.c (recipient_dialog2): Do not free
